objects/Equipment_Type__c/Equipment_Type__c.object-meta.xml
<CustomObject>
    <label>Equipment Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>