objects/Equipment_Type__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measure</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Equipment Types</relationshipLabel>
    <relationshipName>Equipment_Types</relationshipName>
    <type>Lookup</type>
</CustomField>